<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.Android.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="#FFFFFF"
    android:theme="@style/Theme.Android.AppWidgetContainer">

    <ImageButton
        android:id="@+id/imageButton"
        style="@style/IdleWidgetTint"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:accessibilityLiveRegion="polite"
        android:alpha="0.5"
        android:background="#00FFFFFF"
        android:contentDescription="@string/back_button_description"
        android:scaleType="fitEnd"
        android:src="@drawable/baseline_keyboard_arrow_left_24" />

    <ImageButton
        android:id="@+id/imageButton2"
        style="@style/IdleWidgetTint"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:alpha="0.5"
        android:background="#00FFFFFF"
        android:contentDescription="@string/next_button_description"
        android:rotation="180"
        android:scaleType="fitStart"
        android:src="@drawable/baseline_keyboard_arrow_left_24" />

    <TextView
        android:id="@+id/textView1"
        style="@style/IdleWidgetText.Title"
        android:layout_width="289dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_toEndOf="@+id/imageView"
        android:text="@string/example_title"
        android:textAlignment="viewStart"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        style="@style/IdleWidgetText.Address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_toEndOf="@+id/imageView"
        android:text="@string/example_address"
        android:textAlignment="viewStart" />

    <TextView
        android:id="@+id/textView3"
        style="@style/IdleWidgetText.Content"
        android:layout_width="485dp"
        android:layout_height="175dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:isScrollContainer="true"
        android:scrollHorizontally="false"
        android:text="@string/example_content"
        android:textAlignment="textStart" />

    <ImageView
        android:id="@+id/imageView"
        style="@style/IdleWidgetTint"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/logo_description"
        android:scaleType="centerInside"
        android:src="@drawable/hgdh_logo"
        tools:src="@drawable/hgdh_logo" />

</RelativeLayout>